# oseti

./: .travis.yml  CHANGELOG.md  CHANGES.rst  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  test_oseti.py
.circleci/: config.yml
.github/workflows/: test-linux.yml
etc/: make_noun_json.py  make_wago_json.py
oseti/: __init__.py  oseti.py
oseti/dic/: pn_noun.json  pn_wago.json
